--- a/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/Components/Showcase/default.cshtml
+++ b/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/Components/Showcase/default.cshtml
@@ -1,11 +1,11 @@
-﻿@model IEnumerable<News>
+﻿@model IEnumerable<NewsDtoForGet>
 
 <h5 class="">News</h5>
 <hr class="border border-danger border-2 opacity-70">
 
 <div class="row ms-1">
 
-    @foreach (News newsItem in Model)
+    @foreach (NewsDtoForGet newsItem in Model)
     {
         <partial name="_NewsCard" model="newsItem" />
     }
