--- a/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/_ViewImports.cshtml
+++ b/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using PlayReviewApp.PlayReviewDb.Entities.Concrete
 @using PlayReviewApp.PlayReviewDb.Entities.DTO.Account
 @using Microsoft.AspNetCore.Identity
+@using PlayReviewApp.PlayReviewDb.Entities.DTO.News
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
