--- a/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/News/Index.cshtml
+++ b/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/News/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using X.PagedList;
 @using X.PagedList.Mvc.Core;
 
-@model IPagedList<News>
+@model IPagedList<NewsDtoForGet>
 
 <div class="container-fluid">
     <div class="row">
@@ -20,7 +20,7 @@
                                     <h5 class="card-title">@newsItem.Title</h5>
                                     <!-- Tek satırda metni kısaltır -->
                                     <br />
-                                    <p class="card-text text-truncate" style="max-width: 100%;">@newsItem.Content</p>
+                                    <p class="card-text text-truncate" style="max-width: 100%;">@newsItem.Description</p>
                                     <br />
                                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                                 </div>
