--- a/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/Components/PopularGamesList/default.cshtml
+++ b/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/Components/PopularGamesList/default.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<News>
+﻿@model IEnumerable<NewsDtoForGet>
 
 <div class="my-3">
     <h5 class="text-center bg-danger bg-opacity-80 p-3 rounded text-white">
