--- a/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/_Layout.cshtml
+++ b/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/_Layout.cshtml
@@ -11,10 +11,12 @@
     <!-- Toastr -->
     <link href="~/plugins/toastr/toastr.min.css" rel="stylesheet" asp-append-version="true" />
 </head>
-<body>
+<body style="background-color: #f5f5f7">
 
-    <partial name="_Header" />
-    @RenderSection("Header", false)
+    <header>
+        <partial name="_Header" />
+        @RenderSection("Header", false)
+    </header>
 
     <div class="container">
         <main role="main" class="pb-3">
@@ -49,7 +51,7 @@
                     var parts = toastData.split(':');
 
                     if (parts.length === 2) {
-                        var messageType = parts[0].trim(); 
+                        var messageType = parts[0].trim();
                         var message = parts[1].trim();
 
                         toastr[messageType](message, '', toastOptions);
