--- a/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/_Header.cshtml
+++ b/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/_Header.cshtml
@@ -1,22 +1,38 @@
-﻿<header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <div class="container-fluid">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Oyun Günlüğü</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Ana Sayfa</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-controller="News" asp-action="Index">Haberler</a>
-                    </li>
-                </ul>
-            </div>
-            <partial name="_LoginPartial" />
+﻿<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
+    <div class="container">
+        <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">Oyun Günlüğü</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse d-sm-inline-flex justify-content-center">
+            <ul class="navbar-nav text-center">
+                <li class="nav-item">
+                    <b><a class="nav-link text-white " asp-controller="News" asp-action="Index">Haberler</a></b>
+                </li>
+                <li class="nav-item">
+                    <b><a class="nav-link text-white" asp-controller="Review" asp-action="Index">İncelemeler</a></b>
+                </li>
+                <li class="nav-item">
+                    <b><a class="nav-link text-white" asp-controller="Document" asp-action="Index">Dosyalar</a></b>
+                </li>
+                <li class="nav-item">
+                    <b><a class="nav-link text-white" asp-controller="TV" asp-action="Index">Vizyon</a></b>
+                </li>
+                <li class="nav-item">
+                    <b><a class="nav-link text-white" asp-controller="Interview" asp-action="Index">Röportaj</a></b>
+                </li>
+                <li class="nav-item">
+                    <b><a class="nav-link text-white" asp-controller="Hardware" asp-action="Index">Donanım</a></b>
+                </li>
+                <li class="nav-item">
+                    <b><a class="nav-link text-white" asp-controller="GameGuide" asp-action="Index">Rehber</a></b>
+                </li>
+                <li class="nav-item">
+                    <b><a class="nav-link text-white" asp-controller="Magazine" asp-action="Index">Dergi</a></b>
+                </li>
+            </ul>
         </div>
-    </nav>
-</header>
+        <partial name="_LoginPartial" />
+    </div>
+</nav>
