--- a/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/_LoginPartial.cshtml
+++ b/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿<ul class="navbar-nav">
     @if (User.Identity.IsAuthenticated)
     {
-        @if (User.IsInRole("Admin"))
+        @if (User.IsInRole("ADMIN"))
         {
             <li class="nav-item">
                 <a class="nav-link text-dark btn-primary text-white rounded-2" asp-area="Admin" asp-controller="Dasboard" asp-action="Index" title="Manage">Admin Panel</a>
@@ -9,21 +9,21 @@
         }
 
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Account" asp-action="Profile" title="Manage">Hello @User.Identity?.Name</a>
+            <a class="nav-link text-white" asp-controller="Account" asp-action="Profile" title="Manage">Hello @User.Identity?.Name</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-controller="Account" asp-action="Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                <button type="submit" class="nav-link btn btn-link text-white">Logout</button>
             </form>
         </li>
     }
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Account" asp-action="Register">Register</a>
+            <a class="nav-link text-white" asp-controller="Account" asp-action="Register">Register</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">Login</a>
+            <a class="nav-link text-white" asp-controller="Account" asp-action="Login">Login</a>
         </li>
     }
 </ul>
