--- a/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/Components/NewsCarousel/default.cshtml
+++ b/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/Components/NewsCarousel/default.cshtml
@@ -19,11 +19,11 @@
             <!-- Carousel Controls -->
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
+                <span class="visually-hidden">Geri</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
+                <span class="visually-hidden">İleri</span>
             </button>
         </div>
     </div>
