--- a/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/Components/PopularGamesList/default.cshtml
+++ b/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/Components/PopularGamesList/default.cshtml
@@ -3,7 +3,7 @@
 <div class="my-3">
     <h5 class="text-center bg-danger bg-opacity-80 p-3 rounded text-white">
         <i class="fa-solid fa-fire-flame-curved"></i>
-        Popular Games
+        Popüler Oyunlar
     </h5>
     <hr class="border border-danger border-2 opacity-70">
 </div>
