--- a/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/Components/Showcase/default.cshtml
+++ b/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/Components/Showcase/default.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<NewsDtoForGet>
 
-<h5 class="">News</h5>
+<h5 class="">Haberler</h5>
 <hr class="border border-danger border-2 opacity-70">
 
 <div class="row ms-1">
