--- a/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback" asp-append-version="true">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css" asp-append-version="true">
+    <script src="~/lib/font-awesome/js/all.min.js" asp-append-version="true"></script>
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" asp-append-version="true">
     <!-- Tempusdominus Bootstrap 4 -->
@@ -26,10 +26,10 @@
     <!-- summernote -->
     <link rel="stylesheet" href="~/plugins/summernote/summernote-bs4.min.css" asp-append-version="true">
     <!-- CodeMirror -->
-    <link rel="stylesheet" href="../../plugins/codemirror/codemirror.css">
-    <link rel="stylesheet" href="../../plugins/codemirror/theme/monokai.css">
+    <link rel="stylesheet" href="../../plugins/codemirror/codemirror.css" asp-append-version="true">
+    <link rel="stylesheet" href="../../plugins/codemirror/theme/monokai.css" asp-append-version="true">
     <!-- SimpleMDE -->
-    <link rel="stylesheet" href="../../plugins/simplemde/simplemde.min.css">
+    <link rel="stylesheet" href="../../plugins/simplemde/simplemde.min.css" asp-append-version="true">
     <!-- DataTables -->
     <link rel="stylesheet" href="~/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css" asp-append-version="true">
     <link rel="stylesheet" href="~/plugins/datatables-responsive/css/responsive.bootstrap4.min.css" asp-append-version="true">
