--- a/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/_Layout.cshtml
+++ b/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PlayReviewApp.PlayReviewDb.PlayReviewWebUI.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" asp-append-version="true" href="~/lib/font-awesome/css/all.css" />
+    <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" asp-append-version="true" />
     <!-- Toastr -->
     <link href="~/plugins/toastr/toastr.min.css" rel="stylesheet" asp-append-version="true" />
 </head>
