--- a/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Areas/Admin/Views/News/Update.cshtml
+++ b/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Areas/Admin/Views/News/Update.cshtml
@@ -8,7 +8,7 @@
                 <!-- general form elements -->
                 <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">Update News - @Model?.Title</h3>
+                        <h3 class="card-title">Haber Güncelle - @Model?.Title</h3>
                     </div>
                     <!-- /.card-header -->
                     <!-- form start -->
@@ -64,7 +64,7 @@
                         </div>
                         <!-- /.card-body -->
                         <div class="card-footer">
-                            <button type="submit" class="btn btn-primary">Save Changes</button>
+                            <button type="submit" class="btn btn-primary">Kaydet</button>
                         </div>
                     </form>
                 </div>
