--- a/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Areas/Admin/Views/Shared/_Footer.cshtml
+++ b/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Areas/Admin/Views/Shared/_Footer.cshtml
@@ -1,7 +1,4 @@
 ﻿<footer class="main-footer">
-    <strong>Copyright &copy; 2014-2024 Play Review</strong>
-    All rights reserved.
-    <div class="float-right d-none d-sm-inline-block">
-        <b>Version</b> 3.2.0
-    </div>
+    <strong>Copyright &copy; 2020-2024 Play Review</strong>
+    Bütün hakları saklıdır.
 </footer>
