--- a/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Account/AccessDenied.cshtml
+++ b/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Account/AccessDenied.cshtml
@@ -2,18 +2,18 @@
     <h3 class="display-3">
         <i class="fa fa-solid fa-bug-slash"> </i>
         <br>
-        Access Denied
+        Eriþim engellendi.
     </h3>
 </div>
 
 <div class="text-center my-5">
     <div class="lead my-5">
-        You have no permission to access this page.
+        Bu sayfaya eriþim izniniz yok.
     </div>
 
     <div class="btn-group my-5">
-        <a class="btn btn-outline-secondary" asp-controller="Home" asp-action="Index">Home</a>
-        <a class="btn btn-outline-secondary" asp-controller="News" asp-action="Index">News</a>
-        <a class="btn btn-outline-secondary" asp-controller="Account" asp-action="Login">Login</a>
+        <a class="btn btn-outline-secondary" asp-controller="Home" asp-action="Index">Ana sayfa</a>
+        <a class="btn btn-outline-secondary" asp-controller="News" asp-action="Index">Haberler</a>
+        <a class="btn btn-outline-secondary" asp-controller="Account" asp-action="Login">Giriþ Yap</a>
     </div>
 </div>
