--- a/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/_LoginPartial.cshtml
+++ b/PlayReviewApp.PlayReviewDb.PlayReviewWebUI/Views/Shared/_LoginPartial.cshtml
@@ -4,26 +4,26 @@
         @if (User.IsInRole("ADMIN"))
         {
             <li class="nav-item">
-                <a class="nav-link text-dark btn-primary text-white rounded-2" asp-area="Admin" asp-controller="Dasboard" asp-action="Index" title="Manage">Admin Panel</a>
+                <a class="nav-link text-dark btn-primary text-white rounded-2" asp-area="Admin" asp-controller="Dasboard" asp-action="Index" title="Manage">Admin Paneli</a>
             </li>
         }
 
         <li class="nav-item">
-            <a class="nav-link text-white" asp-controller="Account" asp-action="Profile" title="Manage">Hello @User.Identity?.Name</a>
+            <a class="nav-link text-white" asp-controller="Account" asp-action="Profile" title="Manage">Merhaba @User.Identity?.Name</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-controller="Account" asp-action="Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-white">Logout</button>
+                <button type="submit" class="nav-link btn btn-link text-white">Çıkış Yap</button>
             </form>
         </li>
     }
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-white" asp-controller="Account" asp-action="Register">Register</a>
+            <a class="nav-link text-white" asp-controller="Account" asp-action="Register">Kayıt ol</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" asp-controller="Account" asp-action="Login">Login</a>
+            <a class="nav-link text-white" asp-controller="Account" asp-action="Login">Giriş Yap</a>
         </li>
     }
 </ul>
